--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+import:
+    - source: .travis/e2e.yml
+    - source: .travis/unit.yml
+
 git:
   depth: 3
   quiet: true
@@ -74,16 +78,18 @@ jobs:
         - stage: Unit test
           name: Unit test content
           script:  ./scripts/travis/unit-test/content.sh
+
         - stage: Unit test
           name: Unit test core extension demo
           script: ./scripts/travis/unit-test/core-extension.sh
+
         - stage: Unit test
           name: Unit test process insights
           script: ./scripts/travis/unit-test/process.sh
+
         - stage: Unit test
           name: Unit test process-cloud
           script: ./scripts/travis/unit-test/process-cloud.sh
-
 
         - stage: Update Children Projects
           script: ./scripts/travis/update/update-children.sh
@@ -91,47 +97,6 @@ jobs:
         - stage: Release tag
           script: ./scripts/travis/release/git-tag.sh
 
-        - stage: e2e Test
-          name: core
-          before_script:
-            - ./scripts/ci/job_hooks/before_e2e.sh
-            - ./scripts/ci/check-env/check-cs-env.sh || travis_terminate 1
-            - ./scripts/ci/check-env/check-ps-env.sh || travis_terminate 1
-          script: ./scripts/travis/e2e/core-e2e.sh
-          after_script: ./scripts/ci/job_hooks/after_e2e.sh
-
-        - stage: e2e Test
-          name:  content
-          before_script:
-              - ./scripts/ci/job_hooks/before_e2e.sh
-              - ./scripts/ci/check-env/check-cs-env.sh || travis_terminate 1
-          script: ./scripts/travis/e2e/content-services-e2e.sh
-          after_script: ./scripts/ci/job_hooks/after_e2e.sh
-
-        - stage: e2e Test
-          name:  search
-          before_script:
-              - ./scripts/ci/job_hooks/before_e2e.sh
-              - ./scripts/ci/check-env/check-cs-env.sh || travis_terminate 1
-          script: ./scripts/travis/e2e/search-e2e.sh
-          after_script: ./scripts/ci/job_hooks/after_e2e.sh
-
-        - stage: e2e Test
-          name: process
-          before_script:
-              - ./scripts/ci/job_hooks/before_e2e.sh || travis_terminate 1
-              - ./scripts/ci/check-env/check-ps-env.sh || travis_terminate 1
-          script: ./scripts/travis/e2e/process-services-e2e.sh
-          after_script: ./scripts/ci/job_hooks/after_e2e.sh
-
-        - stage: e2e Test
-          name: process Cloud
-          before_script:
-              - ./scripts/ci/job_hooks/before_e2e.sh
-              - ./scripts/ci/check-env/check-cs-env.sh || travis_terminate 1
-              - ./scripts/ci/check-env/check-ps-cloud-env.sh || travis_terminate 1
-          script: ./scripts/travis/e2e/process-services-cloud-e2e.sh
-          after_script: ./scripts/ci/job_hooks/after_e2e.sh
 
         - stage: Check bundle
           script:
